--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -247,8 +247,8 @@
           <a href="{{ entry.slides | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Slides</a>
         {% endif %}
       {% endif %}
-      {% if entry.website %}
-        <a href="{{ entry.website }}" class="btn btn-sm z-depth-0" role="button">Website</a>
+      {% if entry.osf %}
+        <a href="{{ entry.osf }}" class="btn btn-sm z-depth-0" role="button">OSF</a>
       {% endif %}
     </div>
     {% if site.enable_publication_badges %}
